# calc

./: .gitignore  CMakeLists.txt  README.md  calc  calc.cpp  config.yaml  flaghandler.cpp  flaghandler.hpp  install-calc.sh  install.sh  test_cases.txt
include/: flaghandler.hpp
src/: calc.cpp  flaghandler.cpp
